<resources>
    <string name="app_name">Tour-App</string>
    <string name="intro">The University of Ghana Tour Guide App. A place where you get all eatries, hostels, lecture halls and locations.</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="others">Others</string>
    <string name="eatries">Eatries</string>
    <string name="lecture_halls">Lecture Halls</string>
    <string name="resident_halls">Resident Halls</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
