<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TourActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#5fdfc0"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/resident_halls"
        android:textSize="24sp"
        android:padding="40dp"
        android:id="@+id/resident_halls" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#2a454e"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/lecture_halls"
        android:textSize="24sp"
        android:padding="40dp"
        android:id="@+id/lecture_halls" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#5fdfc0"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/eatries"
        android:padding="40dp"
        android:id="@+id/eatries" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#2a454e"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/others"
        android:textSize="24sp"
        android:padding="40dp"
        android:id="@+id/others" />

</LinearLayout>